# Scrapper-CND

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py
app/config/: __init__.py  config.py  log.json  log.py  middlewares.py  server_configs.py
app/exceptions/: __init__.py  handlers.py  request_exception.py
app/router/: __init__.py  estadual.py  fgts.py  municipal.py  trabalhista.py
app/schemas/: __init__.py  requests.py
app/services/: __init__.py  error_utils.py  estadual.py  fgts.py  municipal.py  trabalhista.py
app/utils/: __init__.py  captcha_solver.py  dependencies.py  wrapper.py
