[project]
name = "teste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "2captcha-python>=2.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "playwright>=1.58.0",
    "pytz>=2026.1.post1",
    "uvicorn>=0.41.0",
]
