[project]
name = "teste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "2captcha-python",
    "fastapi",
    "playwright",
    "pydantic",
    "pytz",
    "rich",
    "uvicorn",
    "python-multipart",
]
